--- a/apps/frontend/src/styles/shared.scss
+++ b/apps/frontend/src/styles/shared.scss
@@ -19,6 +19,7 @@ body {
   & #root-container {
     transition: filter $transition-time ease;
     height: 100vh;
+    overflow-y: auto;
   }
   & .tooltip {
     padding: 0;
